--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
 
   <body>
+    <h1>Click to get a new joke</h1>
+    <button>Click me</button>
+    <ul id="jokes">
+      
+    </ul>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script src="app.js"></script>
